<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PriceMenu">


    <LinearLayout
        android:id="@+id/childLayout"
        android:layout_width="411dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:onClick="AddChildToCart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/child" />

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="76dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/childTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/childhaircut"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/childDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/childprice"
                android:textSize="21sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/manLayout"
        android:layout_width="411dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:onClick="AddManToCart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/man" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/manTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manhaircut"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/manDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manprice"
                android:textSize="21sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/womanLayout"
        android:layout_width="411dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:onClick="AddWomanToCart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/woman" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/womanTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/womanhaircut"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/womanDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/womanprice"
                android:textSize="21sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/barberMenu_pic"
        android:layout_width="408dp"
        android:layout_height="221dp"
        android:contentDescription="@string/PriceMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/barberhair" />

</androidx.constraintlayout.widget.ConstraintLayout>


